feat(back): task creation, editing and deletion
